--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe frameBorder="0" style="height: 48em" width="100%" src="./bar_chart.html">
+<iframe frameBorder="0" style="height: 48em" width="100%" src="./health_scatter.html">
 </iframe>
